# realworld-rust-axum

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml
migrations/2023-04-15-064351_create_users/: up.sql
migrations/2023-04-15-064707_create_accounts/: up.sql
migrations/2023-04-15-064831_create_cryptos/: down.sql  up.sql
migrations/2023-04-15-064834_create_orders/: up.sql
migrations/2023-04-15-064851_create_trades/: down.sql  up.sql
migrations/2023-04-15-064854_create_positions/: up.sql
src/: main.rs  schema.rs  test_utils.rs
src/application/services/: user_service.rs
src/application/utils/: auth.rs
src/domain/: mod.rs  models.rs  repositories.rs
src/domain/interfaces/: mod.rs  user_repository.rs
src/domain/models/: account.rs  crypto.rs  mod.rs  order.rs  position.rs  trade.rs  user.rs
src/infrastructure/: mod.rs
src/infrastructure/adapters/: mod.rs  repository_impl.rs
src/infrastructure/database/: db_connection.rs
src/infrastructure/repositories/: user_repository.rs
src/presentation/: extractors.rs  mod.rs
src/presentation/controllers/: mod.rs  restapi_controller.rs
src/presentation/restapi/: extensions.rs  mod.rs  user_routers.rs
src/presentation/routers/: mod.rs  user_routers.rs
src/tests/: model_tests.rs  models.rs  repository_tests.rs  test_user_api.rs  test_utils.rs
