[package]
name = "rust-crypto-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
diesel = { version = "2.0.3", features = ["uuid", "postgres", "r2d2"] }
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
rust-argon2 = "1.0.0"
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
uuid = { version = "1.3.1", features = ["v4", "fast-rng", "macro-diagnostics","serde"] }

[dev-dependencies]
axum-test-helper = "0.2.0"
